# CuTe-Hands-On

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  fp8_tnn_problems.json  profile_cutlass_fp8_h100.sh  profile_cutlass_fp8_tnn.sh  sweep_stages.sh
demos/: PermutationMNK.cu  epilogue_axpby.cu  grid_swizzle_with_cluster.cu  layout_algebra.cu  tma_desc.cu
include/: 01_sgemm1.cuh  cutlass_fp8_gemm.h  cutlass_fp8_reference.h  ref.h  utils.h
profiles/fp8_h100/: expand_heuristics_testlist.py  fp8_e4m3_bf16_problems.json  parse_cutlass_fp8_results.py
src/: 01_sgemm.cu  cutlass_fp8_gemm.cu  cutlass_fp8_reference.cu  fp8_cutlass_reference_check.cu  fp8gemm_opt90.cu  sgemm_1.cu  sgemm_2.cu  sgemm_opt80.cu  sgemm_opt86.cu  sgemm_sm80.cu  utils.cu
src/01_sgemm/: sgemm_1.cu  sgemm_2.cu  sgemm_sm80.cu
src/examples/: cublaslt_fp8_bf16_reference_test.cu  sgemm_1.cu  sgemm_2.cu  sgemm_sm80.cu
src/scripts/: expand_cutlass_fp8_tnn_testlist.py  parse_cutlass_fp8_tnn_results.py  validate_fp8_tnn_problems.py
test/: cublaslt_fp8_bf16_reference_test.cu
tests/: cublaslt_fp8_bf16_reference_test.cu  cutlass_fp8_bf16_tnn_test.cu  fp8_reference_speed_test.cu
